--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         flux: [ 0.52.0, 0.49.0]
         mode: ["UCX"]
-        os: [ ubuntu-20.04 ]
+        os: [ ubuntu-24.04 ]
         compiler: [ gcc ]
         gcc: [ 10 ]
         profiler_mode: ["NONE"]
@@ -65,7 +65,7 @@ jobs:
                               lz4 \
                               pkgconf \
                               libzmq5 \
-                              sqlite
+                              sqlite3
           sudo pip install jsonschema cffi ply pyyaml
           sudo chmod 777 /usr -R
       - name: Install Spack
