--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -1,8 +1,7 @@
 name: Compilation Testing for DYAD
 
-on: workflow_dispatch
-
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
