--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        flux: [ 0.52.0, 0.49.0]
+        flux: [ 0.73.0 ]
         mode: ["UCX"]
         os: [ ubuntu-24.04 ]
         compiler: [ gcc ]
