--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -78,6 +78,9 @@ jobs:
                               sqlite3
           sudo pip install jsonschema cffi ply pyyaml
           sudo chmod 777 /usr -R
+          python3 --version
+          pip3 --version
+          pip --version
       - name: Install Spack
         run: |
           git clone https://github.com/spack/spack.git ${SPACK_DIR}
@@ -85,10 +88,7 @@ jobs:
         run: |
           . ${SPACK_DIR}/share/spack/setup-env.sh
           mkdir -p /home/runner/.spack
-          GCC_VERSION="9.3.0"
-          if [[ $CC == 'gcc-10' ]]; then
-              GCC_VERSION="10.3.0"
-          fi
+          GCC_VERSION="10.5.0"
           cat > /home/runner/.spack/packages.yaml <<EOF
           packages:
             all:
@@ -98,7 +98,7 @@ jobs:
             python:
               buildable: False
               externals:
-                - spec: "python@3.10.12"
+                - spec: "python"
                   prefix: /usr
             py-cffi:
               buildable: False
@@ -193,7 +193,7 @@ jobs:
             openmpi:
               buildable: False
               externals:
-                - spec: "openmpi@4.0.3"
+                - spec: "openmpi"
                   prefix: /usr
             openssl:
               buildable: False
