--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -67,7 +67,7 @@ jobs:
                               ncurses-bin \
                               hwloc \
                               lua5.3 liblua5.3-dev \
-                              python3.10 \
+                              python3.12.3 \
                               python3-pip \
                               python3-venv \
                               libczmq-dev \
@@ -76,11 +76,9 @@ jobs:
                               pkgconf \
                               libzmq5 \
                               sqlite3
-          sudo pip install jsonschema cffi ply pyyaml
-          sudo chmod 777 /usr -R
-          python3 --version
           pip3 --version
-          pip --version
+          sudo pip3 install jsonschema cffi ply pyyaml
+          sudo chmod 777 /usr -R
       - name: Install Spack
         run: |
           git clone https://github.com/spack/spack.git ${SPACK_DIR}
@@ -98,7 +96,7 @@ jobs:
             python:
               buildable: False
               externals:
-                - spec: "python"
+                - spec: "python@3.12.3"
                   prefix: /usr
             py-cffi:
               buildable: False
