--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -67,7 +67,7 @@ jobs:
                               ncurses-bin \
                               hwloc \
                               lua5.3 liblua5.3-dev \
-                              python3.12.3 \
+                              python3 \
                               python3-pip \
                               python3-venv \
                               libczmq-dev \
@@ -76,7 +76,7 @@ jobs:
                               pkgconf \
                               libzmq5 \
                               sqlite3
-          pip3 --version
+          pip3 --version && python3 --version
           sudo pip3 install jsonschema cffi ply pyyaml
           sudo chmod 777 /usr -R
       - name: Install Spack
@@ -191,7 +191,7 @@ jobs:
             openmpi:
               buildable: False
               externals:
-                - spec: "openmpi"
+                - spec: "openmpi@4.1.6"
                   prefix: /usr
             openssl:
               buildable: False
