--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -25,7 +25,7 @@ jobs:
         mode: ["UCX"]
         os: [ ubuntu-24.04 ]
         compiler: [ gcc ]
-        gcc: [ 10 ]
+        gcc: [ 14 ]
         profiler_mode: ["NONE"]
     name: ${{ matrix.os }}-${{ matrix.compiler }}-${{ matrix.gcc }}-${{ matrix.flux }}-${{ matrix.mode }}
     runs-on: ${{ matrix.os }} # Docker-based jobs must run on Ubuntu
@@ -77,6 +77,7 @@ jobs:
                               libzmq5 \
                               sqlite3
           pip3 --version && python3 --version
+          gcc --version
           sudo pip3 install jsonschema cffi ply pyyaml
           sudo chmod 777 /usr -R
       - name: Install Spack
@@ -86,7 +87,7 @@ jobs:
         run: |
           . ${SPACK_DIR}/share/spack/setup-env.sh
           mkdir -p /home/runner/.spack
-          GCC_VERSION="10.5.0"
+          GCC_VERSION="14.2.0"
           cat > /home/runner/.spack/packages.yaml <<EOF
           packages:
             all:
@@ -112,11 +113,6 @@ jobs:
               buildable: False
               externals:
                 - spec: "py-ply@3.11"
-                  prefix: /usr
-            py-pyyaml:
-              buildable: False
-              externals:
-                - spec: "py-pyyaml@6.0.1"
                   prefix: /usr
             czmq:
               buildable: False
