--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -94,36 +94,36 @@ jobs:
             #   target: [x86_64]
             #   providers:
             #     mpi: [openmpi]
-            # python:
-            #   buildable: False
-            #   externals:
-            #     - spec: "python@3.12.3"
-            #       prefix: /usr
-            # py-cffi:
-            #   buildable: False
-            #   externals:
-            #     - spec: "py-cffi@1.17.1"
-            #       prefix: /usr
-            # py-jsonschema:
-            #   buildable: False
-            #   externals:
-            #     - spec: "py-jsonschema@4.17.3"
-            #       prefix: /usr
+            python:
+              buildable: False
+              externals:
+                - spec: "python@3.12.3"
+                  prefix: /usr
+            py-cffi:
+              buildable: False
+              externals:
+                - spec: "py-cffi@1.17.1"
+                  prefix: /usr
+            py-jsonschema:
+              buildable: False
+              externals:
+                - spec: "py-jsonschema@4.10.3"
+                  prefix: /usr
             # py-ply:
             #   buildable: False
             #   externals:
             #     - spec: "py-ply@3.11"
             #       prefix: /usr
-            # czmq:
-            #   buildable: False
-            #   externals:
-            #     - spec: "czmq@4.2.1"
-            #       prefix: /usr
-            # sqlite:
-            #   buildable: False
-            #   externals:
-            #     - spec: "sqlite@3.37.2"
-            #       prefix: /usr
+            czmq:
+              buildable: False
+              externals:
+                - spec: "czmq@4.2.1"
+                  prefix: /usr
+            sqlite:
+              buildable: False
+              externals:
+                - spec: "sqlite@3.45.1"
+                  prefix: /usr
             # libzmq:
             #   buildable: False
             #   externals:
@@ -144,56 +144,56 @@ jobs:
             #   externals:
             #     - spec: "lz4@1.9.3"
             #       prefix: /usr
-            # ncurses:
-            #   buildable: False
-            #   externals:
-            #     - spec: "ncurses@6.3.2"
-            #       prefix: /usr
-            # pkgconf:
-            #   buildable: False
-            #   externals:
-            #     - spec: "pkgconf@1.8.0"
-            #       prefix: /usr
-            # hwloc:
-            #   buildable: False
-            #   externals:
-            #     - spec: "hwloc@2.7.0"
-            #       prefix: /usr
-            # libarchive:
-            #   buildable: False
-            #   externals:
-            #     - spec: "libarchive@3.6.0"
-            #       prefix: /usr
-            # autoconf:
-            #   buildable: False
-            #   externals:
-            #     - spec: "autoconf@2.69"
-            #       prefix: /usr
-            # automake:
-            #   buildable: False
-            #   externals:
-            #     - spec: "automake@1.16.1"
-            #       prefix: /usr
-            # libtool:
-            #   buildable: False
-            #   externals:
-            #     - spec: "libtool@2.4.6"
-            #       prefix: /usr
-            # m4:
-            #   buildable: False
-            #   externals:
-            #     - spec: "m4@1.4.18"
-            #       prefix: /usr
-            # openmpi:
-            #   buildable: False
-            #   externals:
-            #     - spec: "openmpi@4.1.6"
-            #       prefix: /usr
-            # openssl:
-            #   buildable: False
-            #   externals:
-            #     - spec: "openssl@1.1.1f"
-            #       prefix: /usr
+            ncurses:
+              buildable: False
+              externals:
+                - spec: "ncurses@6.4"
+                  prefix: /usr
+            pkgconf:
+              buildable: False
+              externals:
+                - spec: "pkgconf@1.8.1"
+                  prefix: /usr
+            hwloc:
+              buildable: False
+              externals:
+                - spec: "hwloc@2.10.0"
+                  prefix: /usr
+            libarchive:
+              buildable: False
+              externals:
+                - spec: "libarchive@3.7.2"
+                  prefix: /usr
+            autoconf:
+              buildable: False
+              externals:
+                - spec: "autoconf@2.71"
+                  prefix: /usr
+            automake:
+              buildable: False
+              externals:
+                - spec: "automake@1.16.5"
+                  prefix: /usr
+            libtool:
+              buildable: False
+              externals:
+                - spec: "libtool@2.4.7"
+                  prefix: /usr
+            m4:
+              buildable: False
+              externals:
+                - spec: "m4@1.4.19"
+                  prefix: /usr
+            openmpi:
+              buildable: False
+              externals:
+                - spec: "openmpi@4.1.6"
+                  prefix: /usr
+            openssl:
+              buildable: False
+              externals:
+                - spec: "openssl@2.1.7"
+                  prefix: /usr
             # pkg-config:
             #   buildable: False
             #   externals:
