--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -124,26 +124,26 @@ jobs:
               externals:
                 - spec: "sqlite@3.45.1"
                   prefix: /usr
-            # libzmq:
-            #   buildable: False
-            #   externals:
-            #     - spec: "libzmq@4.3.4"
-            #       prefix: /usr
-            # lua:
-            #   buildable: False
-            #   externals:
-            #     - spec: "lua@5.3.6"
-            #       prefix: /usr
-            # lua-luaposix:
-            #   buildable: False
-            #   externals:
-            #     - spec: "lua-luaposix@33.4.0"
-            #       prefix: /usr
-            # lz4:
-            #   buildable: False
-            #   externals:
-            #     - spec: "lz4@1.9.3"
-            #       prefix: /usr
+            libzmq:
+              buildable: False
+              externals:
+                - spec: "libzmq@4.3.5"
+                  prefix: /usr
+            lua:
+              buildable: False
+              externals:
+                - spec: "lua@5.3.6"
+                  prefix: /usr
+            lua-luaposix:
+              buildable: False
+              externals:
+                - spec: "lua-luaposix@36.2.1"
+                  prefix: /usr
+            lz4:
+              buildable: False
+              externals:
+                - spec: "lz4@1.9.4"
+                  prefix: /usr
             ncurses:
               buildable: False
               externals:
