--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -220,7 +220,6 @@ jobs:
           python3 -m venv ${DYAD_INSTALL_PREFIX}
           . ${SPACK_DIR}/share/spack/setup-env.sh
           spack install -j4 flux-core@${FLUX_VERSION}
-          spack load flux-core
           if [[ $DYAD_DTL_MODE == 'UCX' ]]; then
             spack install -j4 ucx@1.18.0
             spack load ucx@1.18.0
@@ -241,6 +240,13 @@ jobs:
         run: |
           echo "Activating spack"
           . ${SPACK_DIR}/share/spack/setup-env.sh
+          spack load flux-core
+          if [[ $DYAD_DTL_MODE == 'UCX' ]]; then
+            spack load ucx@1.18.0
+          fi
+          if [[ $DYAD_PROFILER_MODE == 'CALIPER' ]]; then
+            spack load caliper
+          fi
           echo "Install DYAD"
           cd ${GITHUB_WORKSPACE}
           ls
