--- a/.github/workflows/compile_test.yaml
+++ b/.github/workflows/compile_test.yaml
@@ -228,16 +228,8 @@ jobs:
             spack install -j4 caliper
             spack load caliper
           fi
-          spack install cpp-logger
-          spack load cpp-logger
-          # spack install cpp-logger@develop
-          # spack view --verbose symlink ${DYAD_INSTALL_PREFIX} flux-core@${FLUX_VERSION} # cpp-logger@develop
-          #if [[ $DYAD_DTL_MODE == 'UCX' ]]; then
-          #  spack view --verbose symlink -i ${DYAD_INSTALL_PREFIX} ucx@1.18.0
-          #fi
-          #if [[ $DYAD_PROFILER_MODE == 'CALIPER' ]]; then
-          #  spack view --verbose symlink ${DYAD_INSTALL_PREFIX} caliper
-          #fi
+          #spack install cpp-logger
+          #spack load cpp-logger
       - name: Compile DYAD
         run: |
           echo "Activating spack"
@@ -260,7 +252,7 @@ jobs:
           if [[ $DYAD_DTL_MODE == 'UCX' ]]; then
             CONFIGURE_FLAGS="-DDYAD_ENABLE_UCX_DATA=ON -DDYAD_PROFILER=NONE"
           fi
-          TEST_CONF="-DDYAD_LIBDIR_AS_LIB:BOOL=ON -DCMAKE_BUILD_TYPE=Debug -DDYAD_LOGGER=CPP_LOGGER -DDYAD_LOGGER_LEVEL=INFO"
+          TEST_CONF="-DDYAD_LIBDIR_AS_LIB:BOOL=ON -DCMAKE_BUILD_TYPE=Debug -DDYAD_LOGGER=FLUX -DDYAD_LOGGER_LEVEL=INFO"
           cmake --version
           cmake -DCMAKE_INSTALL_PREFIX=${DYAD_INSTALL_PREFIX} ${CONFIGURE_FLAGS} ${TEST_CONF} ..
           make VERBOSE=1 install -j
